[package]
name = "rustyvctl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hypervisor_abi = { path = "../hypervisor_abi" }
uefi = "0.11.0"
x86 = "0.52.0"
log = { default-features = false, version = "0.4" }
